--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,113 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.nyc_output
+build
+node_modules
+src/**.js
+coverage
+*.log
+package-lock.json
 
-# dependencies
-/node_modules
-node_modules/
-
-# testing
-/frontend/tests/screenshots
-/frontend/tests/videos
-
-# production
-/build
-
-# misc
+node_modules
+build
+*.log
+coverage
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+dist
+**-changes-cache.json
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-api-test/__pycache__/api_test.cpython-39-pytest-6.2.4.pyc
+.idea/workspace.xml
+.idea/usage.statistics.xml
+.idea/tasks.xml
+.eslintcache
+.idea/codestream.xml
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+.idea/sonarlint
+.idea/GitLink.xml
+# Generated files
+.idea/**/contentModel.xml
 
-# python
-**/*-venv
-**/venv
-**/venv*
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
+.idea/**/dataSources.xml
 
-**/__pycache__
-**/*.egg-info
+# Gradle
+.idea/**/gradle.xml
+.idea/**/libraries
 
-**/**/.idea
+# Gradle and Maven with auto-import
+# When using Gradle or Maven with auto-import, you should exclude module files,
+# since they will be recreated, and may cause churn.  Uncomment if using
+# auto-import.
+# .idea/artifacts
+# .idea/compiler.xml
+# .idea/jarRepositories.xml
+# .idea/modules.xml
+# .idea/*.iml
+# .idea/modules
+# *.iml
+# *.ipr
 
-**/.vscode*
+# CMake
+cmake-build-*/
 
-.vscode/settings.json
+# Mongo Explorer plugin
+.idea/**/mongoSettings.xml
 
-.serverless
-.webpack
-.build
-.cache
+# File-based project format
+*.iws
 
-#docker
-/docker/docker-compose.yaml
-/docker/docker-compose.dev.yaml
+# IntelliJ
+out/
 
-/backend/superface/**
-docker/volume
+# mpeltonen/sbt-idea plugin
+.idea_modules/
 
-services/libs/*/dist
+# JIRA plugin
+atlassian-ide-plugin.xml
 
-**/.cubestore
+# Cursive Clojure plugin
+.idea/replstate.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+# Editor-based Rest Client
+.idea/httpRequests
+
+# Android studio 3.1+ serialized cache file
+.idea/caches/build_file_checksums.ser
+
+# Compiled files
+*.tfstate
+*.tfstate.backup
+.terraform.tfstate.lock.info
+# Module directory
+.terraform/
+
+**/.env
+docker/.env
+.vercel
+nx-cloud.env
+
+.pnpm-store/
+
+# NX Build System
+.nx/cache
+
+# EE Symlinked folders - we need these for the EE build
+# @TODO - find a way to remove the symlinks without breaking the build
+!enterprise/packages/**/src
+/.idea/jsLinters/eslint.xml
